Set role to a final field - unalterable. Role field is now ENUM in Accounts class and automatically assigned upon creation. Removed setter-methods in DTO classes.